# mini-copilot

./: .coverage  .gitignore  CLAUDE.md  README.md  README_CN.md  injected_auth.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: test.yaml
iclaw/: github_api.py  main.py  web_search.py
iclaw/commands/: auth.py  model.py  search_provider.py  utils.py
iclaw/tools/: edit_tool.py  test_edit_tool.py
integration_tests/: test_copilot.py  test_edit_integration.py  test_exec_integration.py
leanclaw/: exec_tool.py  login.py  main.py  web_search.py
leanclaw/commands/: auth.py  model.py  search_provider.py
mini_copilot/: github_api.py  login.py  main.py  web_search.py
mini_copilot/commands/: search_provider.py
openclaw/: extract_cookies.py  firefox_auth.py  github_auth.js  github_auth.py  package-lock.json  package.json
scripts/: login.js  login.py
src/: App.css  App.tsx  mini_copilot.py
src/services/: auth.ts
tests/: test_commands.py  test_edit_tool.py  test_exec_tool.py  test_github_api.py  test_login.py  test_main.py  test_mini_copilot.py  test_patch_tool.py  test_web_search.py
tools/: patch_tool.py  test_edit_tool.py
