[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-copilot"
version = "0.1.0"
description = "Interactive CLI REPL for chatting with GitHub Copilot"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.32.0"]

[project.scripts]
mini-copilot = "mini_copilot.main:main"
mini-copilot-login = "mini_copilot.login:main"
